# warning_tg_bot

./: .gitignore  Cargo.toml  authorized.json  bot.sq3  users.json
src/: app_state.rs  dptree.rs  error.rs  keys.rs  main.rs  settings.rs  timer.rs  users.rs
src/db/: chat_id_user_id.rs  connection.rs  group_repository.rs  mod.rs  table.sql  user_repository.rs
