[package]
name = "warning_tg_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde="1.0.215"
serde_json="1.0.132"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
once_cell="1.20.2"
sqlx= {version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
uuid= {version="1.11.0", features = ["v7"]}
thiserror="2.0.3"
rand="*"